@@ -1,2 +1,9 @@
+## Process this file with automake to produce Makefile.in
+#
+# Makefile.am
+#
+# $Id$
+#
+
 SUBDIRS	= data src test wrap
 
