@@ -17,7 +17,6 @@ e.4.x:
   (ctrl-c should copy selected label in dataview when focused)
 - bugfix: crash when gnome icon theme is missing or not configured
 - bugfix: gnome.libgnome_module_info_get() removed in new gnome-python
-- clean up the build-system
 - examine drag/drop undo/redo crashes
 - update icons when theme changes
 
