@@ -1,2 +1,9 @@
+## Process this file with automake to produce Makefile.in
+#
+# data/icons/Makefile.am
+#
+# $Id$
+#
+
 SUBDIRS = 16x16 24x24 32x32 48x48
 
