@@ -1,7 +1,10 @@
+## Process this file with automake to produce Makefile.in
+#
+# data/ui/Makefile.am
+#
+# $Id$
+#
+
 uidir		= $(pkgdatadir)/ui
-ui_DATA		= \
-	actions.xml \
-	menubar.xml \
-	popup-tree.xml \
-	toolbar.xml
+ui_DATA		= actions.xml menubar.xml popup-tree.xml toolbar.xml
 
