@@ -1,2 +1,9 @@
+## Process this file with automake to produce Makefile.in
+#
+# wrap/Makefile.am
+#
+# $Id$
+#
+
 SUBDIRS = authmanager crack
 
