@@ -21,6 +21,9 @@ Bugfixes:
 - prefs, password generator and search dialogs are no longer modal
 - display non-ascii characters in filenames correctly
 
+Code changes:
+- cleaned up the build-system and source file layout
+
 
 2005-02-08: Revelation 0.4.0
 ============================
